# CPHIS

./: Atest.mtx  LICENSE  Makefile  README.md  btest.mtx  doxygen.conf  doxygen.dox
backends/tpetra/: CMakeLists.txt  cphis_tpetra.cc  cphis_tpetra.h
examples/: cphis_solve_mm.c
include/: aux.h  conf.h  cphis.h  linalg.h  scale_solver.h  solver.h
src/: conf.c  errors.c  io.c  krylov.c  lu.c  mat.c  mat_default.c  relaxation.c  scale_solver.c  solver.c  vec.c  vec_default.c
tests/: run.sh  test_bicgstab_solver.c  test_block_jacobi_solver.c  test_cg_solver.c  test_jacobi_solver.c  test_lu.c  test_lu_solver.c  test_matvec.c  test_multigrid_solver.c  test_poisson2d.h
